[package]
name = "transit_rust"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", default-features = false, features = ["json", "gzip", "rustls-tls"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde_json = "1"
serde = { version = "1.0", features = ["derive"] }
chrono = "0.4.31"
derive_more = "0.99.17"
rpi-led-matrix = { git = "https://github.com/APuzyk/rust-rpi-rgb-led-matrix.git" }
yaml-rust2 = "0.10.3"
clap = { version = "4", features = ["derive"] }
log = "0.4"
env_logger = "0.11"
